--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,20 @@
+@import 'theme/theme.css';
+@import 'theme/components.css';
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
+  'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+  sans-serif;
+  padding: 0;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+html {
+  background: radial-gradient(var(--secondary), var(--primary));
+  color: var(--primary-text);
+  margin: 0;
+  padding: 0;
+  height: 100%;
 }
